--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     gtag('config', 'G-RN01B16G8M');
 </script>
 <body>
+
+    <div>
+        <h1>Flash vs. Arrow</h1>
+        <h2>The Flash (Season 01 Episode 08)</h2>
+        <p>This is the first crossover between the two main protaganist Flash (Barry Allen) and Arrow (Oliver Queen). Though it was not actually the first time, because we saw them together in Arrow (S02 E08) and Flash(S01 E01). Though it was the first time that we actually saw flash aside Arrow in action. So, Back to the show. Here we saw, Barry was hypnotized by Prism (a villian who can actually manipulate a particular person's mind and can actually make him/her angry. This can be called insane, but this is the city of Metahumans. Also, we had seen that Barry becomes angry and comes over Caitlin, where he says harsh words about Ronnie, her dead fiancee. 
+            He then meets Olvier Queen , and actually speaks about the way he (barry) thinks about him (Oliver), he says that Oliver is jealous about how much Barry is differemt from the person he was earlier. Then he speaks to Captain Singh in CCPD and actually he does not speak. he screams at him.  After that, he asks Detective Joe West, his foster father to make his biological father Henry Allen out of Jail. Then , his attention goes towards Eddie Thawne along with Iris West. His anger is now in at his limit, He finally attacks Eddie , a jealousy for his crush with another person. When he was in his rage, Arrow appears and tried to stop him, but even with high experience on fighting, Oliver wasn't able to control barry. 
+            So, what he can do is by stopping the Flash with his words. But the Kaboom happened and Flash's leg was stuck by an arrow. When he got his body recovered, they finally catched the Prism. But the only thing can't happen is getting Iris' trust over Flash again, instantly. At Jitters, Oliver met his ex-girlfriend, who was a mother to his child, which he probably wouldn't be knowning because of Moria Queen.</p>
+    </div>
     <div class="container">
         <div class="testimonial">
             <div class="testimonial-text">
