--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
             </div>
         </div>
     </div>
+
+    Contact Me: 
+    Name - Miheer Chaudary
+    Gmail - agarwalag2000@gmail.com
     <script>
         let userTexts = document.getElementsByClassName("user-text");
         let userPics = document.getElementsByClassName("user-pic");
