--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
 
     Contact Me: 
-    Name - Miheer Chaudary
+    Name - Meheer Chaudary
     Gmail - agarwalag2000@gmail.com
     <script>
         let userTexts = document.getElementsByClassName("user-text");
