--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
 
     <div>
+        
+    </div>
+    <div>
         <h1>Flash vs. Arrow</h1>
         <h2>The Flash (Season 01 Episode 08)</h2>
         <p>This is the first crossover between the two main protaganist Flash (Barry Allen) and Arrow (Oliver Queen). Though it was not actually the first time, because we saw them together in Arrow (S02 E08) and Flash(S01 E01). Though it was the first time that we actually saw flash aside Arrow in action. So, Back to the show. Here we saw, Barry was hypnotized by Prism (a villian who can actually manipulate a particular person's mind and can actually make him/her angry. This can be called insane, but this is the city of Metahumans. Also, we had seen that Barry becomes angry and comes over Caitlin, where he says harsh words about Ronnie, her dead fiancee. 
@@ -102,9 +105,9 @@
         </div>
     </div>
 
-    Contact Me: 
-    Name - Meheer Chaudary
-    Gmail - agarwalag2000@gmail.com
+    Contact Me:  <br>
+    Name - Meheer Chaudary <br>
+    Gmail - agarwalag2000@gmail.com <br>
     <script>
         let userTexts = document.getElementsByClassName("user-text");
         let userPics = document.getElementsByClassName("user-pic");
