--- a/index.html
+++ b/index.html
@@ -1,127 +1,23 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testimonial Page Design - Easy Tutorials</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RN01B16G8M"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-RN01B16G8M');
-</script>
 <body>
-
-    <div>
-        
-    </div>
-    <div>
-        <h1>Flash vs. Arrow</h1>
-        <h2>The Flash (Season 01 Episode 08)</h2>
-        <p>This is the first crossover between the two main protaganist Flash (Barry Allen) and Arrow (Oliver Queen). Though it was not actually the first time, because we saw them together in Arrow (S02 E08) and Flash(S01 E01). Though it was the first time that we actually saw flash aside Arrow in action. So, Back to the show. Here we saw, Barry was hypnotized by Prism (a villian who can actually manipulate a particular person's mind and can actually make him/her angry. This can be called insane, but this is the city of Metahumans. Also, we had seen that Barry becomes angry and comes over Caitlin, where he says harsh words about Ronnie, her dead fiancee. 
-            He then meets Olvier Queen , and actually speaks about the way he (barry) thinks about him (Oliver), he says that Oliver is jealous about how much Barry is differemt from the person he was earlier. Then he speaks to Captain Singh in CCPD and actually he does not speak. he screams at him.  After that, he asks Detective Joe West, his foster father to make his biological father Henry Allen out of Jail. Then , his attention goes towards Eddie Thawne along with Iris West. His anger is now in at his limit, He finally attacks Eddie , a jealousy for his crush with another person. When he was in his rage, Arrow appears and tried to stop him, but even with high experience on fighting, Oliver wasn't able to control barry. 
-            So, what he can do is by stopping the Flash with his words. But the Kaboom happened and Flash's leg was stuck by an arrow. When he got his body recovered, they finally catched the Prism. But the only thing can't happen is getting Iris' trust over Flash again, instantly. At Jitters, Oliver met his ex-girlfriend, who was a mother to his child, which he probably wouldn't be knowning because of Moria Queen.</p>
-    </div>
-    <div class="container">
-        <div class="testimonial">
-            <div class="testimonial-text">
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>I think this platform is great overall, the only real issue I've been dealing with is that after watching a reel or sometimes just a regular video, the feed resets when exited and I cycle through a lot of the same posts.
-                    </p>
-                    <span>JOHN RAYAN, CEO HUMBLE</span>
-                </div>
-                <div class="user-text active-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>So, far, it has been excellent. However, sometimes when you click to double your points and it goes to an ad? It seems to get stuck, like it won't let you return to the game after the ad's timer has run out.</p>
-                    <span>Ronald Reagen, MD Harman</span>
-                </div>
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>For how big this platform is, I'm super impressed with how quick it functions regardless if I'm on data or Wifi. Yes, it builds up a sizable cache in a short amount of time, but that's an easy fix in the settings.</p>
-                    <span>Vladimir Putin, CTO Xiaomi</span>
-                </div>
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>Great Platform! But one annoying bug involving the friend tab: sometimes when I see a notification for a new friend, no new friend will show up in my feed, or the notification disappears after a few seconds.</p>
-                    <span>Great Thunderg, HR Infoedz</span>
-                </div>
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>The only Platform on my phone that launches multiple instances of itself. Can quickly become resource-consuming when using the app throughout the day. Most recommended platform in the world.</p>
-                    <span>Amelia Earhart, TL Amazon</span>
-                </div>
+    <div class="app">
+        <h1>Simple Quiz</h1>
+        <div class="quiz">
+            <h2 id="question">Question goes here</h2>
+            <div id="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
             </div>
-            <div class="testimonial-pic">
-                <img src="images/user1.png" class="user-pic" onclick="showReview()">
-                <img src="images/user2.png" class="user-pic active-pic" onclick="showReview()">
-                <img src="images/user3.png" class="user-pic" onclick="showReview()">
-                <img src="images/user4.png" class="user-pic" onclick="showReview()">
-                <img src="images/user5.png" class="user-pic" onclick="showReview()">
-            </div>
+            <button id="next-btn">Next</button>
         </div>
     </div>
-    <div class="container">
-        <div class="testimonial">
-            <div class="testimonial-text">
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>I think this platform is great overall, the only real issue I've been dealing with is that after watching a reel or sometimes just a regular video, the feed resets when exited and I cycle through a lot of the same posts.
-                    </p>
-                    <span>JOHN RAYAN, CEO HUMBLE</span>
-                </div>
-                <div class="user-text active-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>So, far, it has been excellent. However, sometimes when you click to double your points and it goes to an ad? It seems to get stuck, like it won't let you return to the game after the ad's timer has run out.</p>
-                    <span>Ronald Reagen, MD Harman</span>
-                </div>
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>For how big this platform is, I'm super impressed with how quick it functions regardless if I'm on data or Wifi. Yes, it builds up a sizable cache in a short amount of time, but that's an easy fix in the settings.</p>
-                    <span>Vladimir Putin, CTO Xiaomi</span>
-                </div>
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>Great Platform! But one annoying bug involving the friend tab: sometimes when I see a notification for a new friend, no new friend will show up in my feed, or the notification disappears after a few seconds.</p>
-                    <span>Great Thunderg, HR Infoedz</span>
-                </div>
-                <div class="user-text">
-                    <i class="fas fa-qoute-left">&ldquo; </i>
-                    <p>The only Platform on my phone that launches multiple instances of itself. Can quickly become resource-consuming when using the app throughout the day. Most recommended platform in the world.</p>
-                    <span>Amelia Earhart, TL Amazon</span>
-                </div>
-            </div>
-            <div class="testimonial-pic">
-                <img src="images/user1.png" class="user-pic" onclick="showReview()">
-                <img src="images/user2.png" class="user-pic active-pic" onclick="showReview()">
-                <img src="images/user3.png" class="user-pic" onclick="showReview()">
-                <img src="images/user4.png" class="user-pic" onclick="showReview()">
-                <img src="images/user5.png" class="user-pic" onclick="showReview()">
-            </div>
-        </div>
-    </div>
-
-    Contact Me:  <br>
-    Name - Meheer Chaudary <br>
-    Gmail - agarwalag2000@gmail.com <br>
-    <script>
-        let userTexts = document.getElementsByClassName("user-text");
-        let userPics = document.getElementsByClassName("user-pic");
-        function showReview(){
-            for(userPic of userPics){
-                userPic.classList.remove("active-pic");
-            }
-            for(userText of userTexts){
-                userText.classList.remove("active-text");
-            }
-            let i = Array.from(userPics).indexOf(event.target);
-            userPics[i].classList.add("active-pic");
-            userTexts[i].classList.add("active-text");
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
